2009-06-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc: --buildmap can now be used for maps other than map 0 through the
	  "--mapnum <N>" parameter Disallowed --game if the game had been specified
	  otherwise (--bg, --si, --fov, --ss).
	* shapeid.*, docs/u7tech.txt, fnames.h, palettes.cc, win32/*, data/*: There
	  were actually 17, not 11, xform tables used in the original games; Exult
	  now implements the other 6. OpenGL/fallback blends are now specified in
	  a file called "blends.dat" (which is bundled in exult_XX.flx for BG/SI).
	  XForms are now patcheable (as is this new blends file). There is still a
	  fallback hard-coded blend set just in case. A blends.dat file is included
	  for new games.
	* shapes/vgafile.*: Fixed memory leaks.
	* segfile.*, msvc9/*, msvcstuff/*, Makefile.{common,am}: A segfile was a
	  stripped-down version of a flex reader used only once; it has have been
	  removed.
	* All others: Cleanup/proper verification if read file object is valid.

2009-05-20	Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation, FAQ and ReadME.OSX.
	
2009-05-19	Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation with mods and patch instructions.
	* docs/xml/html.xsl and php.xsl now support coloured tags for manual exult.cfg settings
	  
2009-05-19	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Implemented feature request #2793602 in a way that (hopefully) won't be
	  the source of any trouble.
	* Fixed bugs #2793317 and #2793229.
	* Several destructors that should be virtual but weren't are now. Fixed many
	  memory leaks, delete/delete[] and delete/free mixups. Removed unneeded
	  checks before deleting objects. Removed several unused variables. Turned
	  a few 'const std:string' parameters into 'const std::string&'. Fixed a
	  buffer overflow.

2009-05-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/shapelst.cc: Set frame spin upper-bound *before* setting value;