@@ -1,3 +1,9 @@
+2009-07-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* mapedit/exult_studio.glade: Fixed a couple mislabeled flags in the NPC
+	  editing window.
+	* audio/midi_drivers/ALSAMidiDriver.cpp: Fixed invalid conversion.
+	* data/Makefile.am: Remove error with 'make install'.
+
 2009-06-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* exult.cc: --buildmap can now be used for maps other than map 0 through the
 	  "--mapnum <N>" parameter Disallowed --game if the game had been specified
